--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "awilix": "^4.2.1",
-    "chai": "^4.2.0",
     "express": "^4.16.4",
-    "mocha": "^6.1.3",
-    "sinon": "^7.3.1",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "chai-uuid": "^1.0.6",
+    "sinon": "^7.3.1",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.3"
   }
 }
