--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "microservice to store and process images",
   "main": "src/index.js",
   "scripts": {
-    "test:unit": "mocha $(find src test/helpers -name '*.test.js')"
+    "test:unit": "mocha $(find src -name '*.test.js')"
   },
   "author": "abi travers",
   "license": "ISC",
@@ -14,9 +14,10 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "chai-uuid": "^1.0.6",
-    "sinon": "^7.3.1",
     "chai": "^4.2.0",
-    "mocha": "^6.1.3"
+    "chai-uuid": "^1.0.6",
+    "mocha": "^6.1.3",
+    "sinon": "^7.3.1",
+    "sinon-chai": "^3.3.0"
   }
 }
