--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "mocha $(find src -name '*.test.js')",
-    "test:integration": "mocha $(find test/integration -name '*.test.js')"
+    "test:integration": "mocha $(find test/integration -name '*.test.js')",
+    "test:coverage": "nyc npm run test:unit"
   },
   "author": "abi travers",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "chai": "^4.2.0",
     "chai-uuid": "^1.0.6",
     "mocha": "^6.1.3",
+    "nyc": "^14.0.0",
     "sinon": "^7.3.1",
     "sinon-chai": "^3.3.0"
   }
