--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "awilix": "^4.2.1",
     "express": "^4.16.4",
+    "getenv": "^0.7.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
