--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "awilix": "^4.2.1",
     "express": "^4.16.4",
     "getenv": "^0.7.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
