--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "microservice to store and process images",
   "main": "src/index.js",
   "scripts": {
-    "start": "dotenv node src/index.js",
-    "test": "npm run test:unit && npm run test:integration",
-    "test:unit": "mocha $(find src -name '*.test.js')",
+    "start": "dotenv nodemon src/index.js",
+    "test": "dotenv npm run test:unit && npm run test:integration",
+    "test:unit": "dotenv mocha $(find src -name '*.test.js')",
     "test:integration": "dotenv mocha $(find test/integration -name '*.test.js')",
     "test:coverage": "nyc npm run test:unit"
   },
@@ -14,10 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "awilix": "^4.2.1",
+    "body-parser": "^1.19.0",
     "dotenv-cli": "^2.0.0",
     "express": "^4.16.4",
     "getenv": "^0.7.0",
     "morgan": "^1.9.1",
+    "nodemon": "^1.18.11",
     "uuid": "^3.3.2",
     "validator": "^10.11.0"
   },
