--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv-cli": "^2.0.0",
     "express": "^4.16.4",
     "getenv": "^0.7.0",
+    "jimp": "^0.6.4",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
     "uuid": "^3.3.2",
@@ -30,6 +31,7 @@
     "nyc": "^14.0.0",
     "sinon": "^7.3.1",
     "sinon-chai": "^3.3.0",
+    "supertest": "^4.0.2",
     "winston": "^3.2.1"
   }
 }
