--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jimp": "^0.6.4",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.11",
+    "sharp": "^0.22.1",
     "uuid": "^3.3.2",
     "validator": "^10.11.0"
   },
