--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-uuid": "^1.0.6",
     "mocha": "^6.1.4",
     "nyc": "^14.0.0",
